smt.bnf
boolexpr: conexpr ( OR conexpr)*
conexpr: compexpr (AND compexpr)* | not compexr  
compexpr: numexpr (less, less_equal ,greater_equal ,greater ,equal) numexpr | boolean  
numexpr: term ( plus, minus) term)*
term: factor ((mul, div) factor)*
factor: var| integer | LPAREN expr RPAREN
